# prot-scriber

./: .gitignore  Cargo.toml  DESCRIPTION  README.md  test_lst.txt
R/: annotation.R  evaluation.R  funks.R  prot_scriber_scoring.R  visualization.R  zzz.R
data/: regexLists.RData
exec/: annotateAndEvaluateFaba.R  annotateAndEvaluatePcoccineus.R  loadFabaSeqSimSearchResults.R  loadFaba_PfamA_Mercator4_results.R  loadMetaEukSeqSimSearchResults.R  loadPcoccineusSeqSimSearchResults.R  loadPcoccineus_PfamA_Mercator4_results.R  measurePerformance.R  measurePerformanceGeneFamilies.R  p_coccineus_multi_region_HRDs.R  p_coccineus_queries_alignment_regions.R  prepareFabaAminoAcidSeqs.R  visualize_faba_results.R  visualize_p_coccineus_results.R
inst/: Blacklist Vorschläge  blacklist_descline.txt  blacklist_token.txt  faba_HRDs.html.bz2  faba_HRDs.tsv  filter_descline.txt  filter_token.txt  hrds_visualization_html_brew.txt  p_coccineus_HRDs.html.bz2  p_coccineus_HRDs_multi_region.html.bz2  playground.R  test_prot_descs.txt
misc/: Soltu.DM.02G015700.1_AA_vs_trEMBL_blastpout.txt  Soltu.DM.02G015700.1_AA_vs_trEMBL_blastpout_candidate_descriptions.txt  Soltu.DM.09G022410.3_vs_UniProt_Sprot_blastp.txt  Twelve_Proteins_vs_Swissprot_blastp.txt  Twelve_Proteins_vs_trembl_blastp.txt  Two_Potato_Proteins_vs_trEMBL_blastpout.txt  blacklist_stitle_regexs.txt  capture_replace_pairs.txt  clustering.R  consensus_description.R  families.txt  family_prots_vs_Swissprot.txt  family_prots_vs_trEMBL.txt  filter_stitle_regexs.txt  filter_stitle_regexs_NCBI_NR.txt  filter_stitle_regexs_UniRef.txt  (+9 more)
(+21 files in other folders)
