[package]
name = "prot-scriber"
version = "0.1.0"
authors = ["Dr. Asis Hallab <asis.hallab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.7"
assert_approx_eq = "1.1.0"
regex = "1.5.4"
rayon = "1.5.1"
lazy_static = "1.4.0"
