[package]
name = "prot-scriber"
version = "0.1.5"
authors = ["Dr. Asis Hallab <asis.hallab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.3"
assert_approx_eq = "1.1.0"
regex = "1.5.4"
rayon = "1.5.1"
lazy_static = "1.4.0"
num_cpus = "1.13.1"
statrs = "0.15.0"
fancy-regex = "0.10.0"
